test/visibility/except/blockSecondaryMethod.good
blockSecondaryMethod.chpl:8: error: unresolved call 'Foo.newMethod(1)'
